      + Silhouette - Creates an outline of the image, over a black background.
      + Threshold - Turns image pure colour & pure white (no grey or color).
      + Snow Ball - Places random snow balls over the image.
      + Snow Flake - Places random snow flakes over the image.
      + Noise - Adds random noise to the image.
      + Mosaic - Gives the image a mosaic effect.
      By Andrew 'akanewbie' Corcoran <akanewbie@gmail.com>
      (Part of Tux4Kids' participation in Google Summer of Code 2008)

    * + Confetti - Paints random confetti bits on the canvas.
      + Fold - Folds the corners of the image up, like a piece of paper.
      + Rails - Draws train tracks / rails over the image.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      (Part of Tux4Kids' participation in Google Summer of Code 2008)

  * Magic Tool Improvememnts:
    --------------------------
    * Added "_switchin()" and "_switchout()" functions to Magic tool API,
      to tell Magic tools when they are selected or deselected, or when
      their mode changes..

    * Added "_modes()" function to Magic tool API, so Magic tool plugins
      can tell Tux Paint what modes it accepts, 'paint' or 'fullscreen'.

    * "_click()" function is now given a 'mode' value, corresponding to the
      mode the current tool is in.

    * "_get_description()" function is now given a 'mode' value, and is
      called once for each mode a particular tool claims to support.
      (e.g., "which=0,mode=MODE_PAINT", then "which=1,mode=MODE_PAINT",
      then "which=1,mode=MODE_FULLSCREEN")

    * "Paint" and "Fullscreen" control buttons added to Magic tool
      selector UI.  Can be disabled with "--nomagiccontrols".

    * "Negative", "Tint", "Glass Tile", "Darken" and "Lighten" tools
      can all now affect the entire image.

  * Build System Improvements
    -------------------------
    * Adhering to Debian & FreeDesktop.org standards regarding .desktop file.

  * Bug Fixes
    ---------