@@ -43,7 +43,7 @@ enum {
 	blur_NUM_TOOLS
 };
 
-const int blur_RADIUS = 16;
+static const int blur_RADIUS = 16;
 
 static Mix_Chunk * blur_snd_effect[blur_NUM_TOOLS];
 
@@ -71,6 +71,9 @@ int blur_init(magic_api * api){
   for (i = 0; i < blur_NUM_TOOLS; i++){
     snprintf(fname, sizeof(fname), "%s/sounds/magic/%s", api->data_directory, blur_snd_filenames[i]);
     blur_snd_effect[i] = Mix_LoadWAV(fname);
+    if (blur_snd_effect[i]==NULL){
+      return(0);
+    }
   }
   return(1);
 }
