@@ -46,13 +46,13 @@
 #endif
 
 
-const int mosaic_AMOUNT= 300;
-const int mosaic_RADIUS = 16;
-const double mosaic_SHARPEN = 1.0;
+static const int mosaic_AMOUNT= 300;
+static const int mosaic_RADIUS = 16;
+static const double mosaic_SHARPEN = 1.0;
 
 //Holder for the pre calulated pixel values
-SDL_Surface * mosaic_temp;
-SDL_Surface * mosaic_final;
+static SDL_Surface * mosaic_temp;
+static SDL_Surface * mosaic_final;
 
 enum {
 	TOOL_MOSAIC,
@@ -85,6 +85,9 @@ int mosaic_init(magic_api * api){
   for (i = 0; i < mosaic_NUM_TOOLS; i++){
     snprintf(fname, sizeof(fname), "%s/sounds/magic/%s", api->data_directory, mosaic_snd_filenames[i]);
     mosaic_snd_effect[i] = Mix_LoadWAV(fname);
+    if (mosaic_snd_effect[i]==NULL){
+      return(0);
+    }
   }
 
   return(1);
