@@ -43,8 +43,8 @@
 #define gettext_noop(String) String
 #endif
 
-const int noise_AMOUNT = 100.0;
-const int noise_RADIUS = 16;
+static const int noise_AMOUNT = 100.0;
+static const int noise_RADIUS = 16;
 
 enum {
 	TOOL_NOISE,
@@ -78,6 +78,9 @@ int noise_init(magic_api * api){
   for (i = 0; i < noise_NUM_TOOLS; i++){
     snprintf(fname, sizeof(fname), "%s/sounds/magic/%s", api->data_directory, noise_snd_filenames[i]);
     noise_snd_effect[i] = Mix_LoadWAV(fname);
+    if (noise_snd_effect[i]==NULL){
+      return(0);
+    }
   }
   return(1);
 }
